--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,13 @@ list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
 
 enable_language(CXX)
 
-find_package(xbmc REQUIRED)
-find_package(xbmcplatform REQUIRED)
+find_package(Kodi REQUIRED)
+find_package(p8-platform REQUIRED)
+find_package(kodiplatform REQUIRED)
 
-include_directories(${XBMC_INCLUDE_DIR}
-                    ${XBMCPLATFORM_INCLUDE_DIRS}
+include_directories(${KODI_INCLUDE_DIR}
+                    ${kodiplatform_INCLUDE_DIRS}
+                    ${p8-platform_INCLUDE_DIRS}
                     ${PROJECT_SOURCE_DIR}/lib/UnrarXLib)
 
 add_subdirectory(lib/UnrarXLib)
@@ -23,6 +25,6 @@ add_definitions(-D_LARGEFILE64_SOURCE
                 -D_FILE_OFFSET_BITS=64
                 -D__STDC_FORMAT_MACROS)
 
-set(DEPLIBS unrarxlib)
+set(DEPLIBS unrarxlib ${kodiplatform_LIBRARIES})
 
 build_addon(vfs.rar RAR DEPLIBS)
