--- a/vfs.rar/addon.xml.in
+++ b/vfs.rar/addon.xml.in
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="vfs.rar"
-  version="1.0.0"
+  version="1.0.1"
   name="RAR archive support"
   provider-name="spiff">
-  <requires>
-    <import addon="kodi.vfs" version="1.0.0"/>
-  </requires>
+  <requires>@ADDON_DEPENDS@</requires>
   <extension
     point="kodi.vfs"
     protocols="rar"
