--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,39 +1,27 @@
 version: BuildNr.{build}
 
-init:
-- ps: $commit = $env:appveyor_repo_commit.SubString(0,7)
-- ps: $timestamp = $env:appveyor_repo_commit_timestamp.SubString(0,10)
-- ps: Update-AppveyorBuild -Version ("{0}-{1}-{2}" -f $env:appveyor_repo_branch, $commit, $timestamp)
+image: Visual Studio 2015
 
-#branches:
-#    only:
-#      - master
+shallow_clone: true
 
-# clone directory
 clone_folder: c:\projects\vfs.rar
-
-# fetch repository as zip archive
-shallow_clone: true                 # default is "false"
 
 environment:
   app_id: vfs.rar
 
   matrix:
-    #- GENERATOR: "Visual Studio 12 2013"
-      #CONFIG: Debug
-
-    - GENERATOR: "Visual Studio 12 2013"
+    - GENERATOR: "Visual Studio 14"
+      CONFIG: Release
+    - GENERATOR: "Visual Studio 14 Win64"
       CONFIG: Release
 
 build_script:
-  - call "%VS120COMNTOOLS%..\..\VC\bin\vcvars32.bat"
-  - set cur_dir=%cd%
   - cd ..
   - git clone --depth=1 https://github.com/xbmc/xbmc.git
   - cd %app_id%
   - mkdir build
   - cd build
   - mkdir -p definition\%app_id%
-  - echo %app_id% %cur_dir% %APPVEYOR_REPO_COMMIT% > definition\%app_id%\%app_id%.txt
-  - cmake -G "NMake Makefiles" -DADDONS_TO_BUILD=%app_id% -DCMAKE_BUILD_TYPE=%CONFIG% -DADDONS_DEFINITION_DIR=%cur_dir%/build/definition -DADDON_SRC_PREFIX=../.. -DCMAKE_INSTALL_PREFIX=../../xbmc/addons -DPACKAGE_ZIP=1 ../../xbmc/cmake/addons
-  - cmake --build "%cur_dir%\build" --target %app_id%
+  - echo %app_id% %APPVEYOR_BUILD_FOLDER% %APPVEYOR_REPO_COMMIT% > definition\%app_id%\%app_id%.txt
+  - cmake -T host=x64 -G "%GENERATOR%" -DADDONS_TO_BUILD=%app_id% -DCMAKE_BUILD_TYPE=%CONFIG% -DADDONS_DEFINITION_DIR=%APPVEYOR_BUILD_FOLDER%/build/definition -DADDON_SRC_PREFIX=../.. -DCMAKE_INSTALL_PREFIX=../../xbmc/addons -DPACKAGE_ZIP=1 ../../xbmc/cmake/addons
+  - cmake --build . --config %CONFIG% --target %app_id%
