--- a/lib/UnrarXLib/CMakeLists.txt
+++ b/lib/UnrarXLib/CMakeLists.txt
@@ -47,6 +47,6 @@ add_library(unrarxlib STATIC ${SOURCES})
 if(NOT CORE_SYSTEM_NAME MATCHES windows)
   target_compile_definitions(unrarxlib PRIVATE -DSILENT)
 else()
-  target_compile_definitions(unrarxlib PRIVATE -D_XBMC -Dstrcasecmp=_stricmp)
+  target_compile_definitions(unrarxlib PRIVATE -D_XBMC -Dstrcasecmp=_stricmp -D_CRT_NONSTDC_NO_DEPRECATE)
   target_compile_options(unrarxlib PRIVATE /wd4146)
 endif()
