--- a/.travis.yml
+++ b/.travis.yml
@@ -14,17 +14,15 @@ env:
 matrix:
   include:
     - os: linux
-      dist: trusty    
+      dist: xenial
       sudo: required
       compiler: gcc
     - os: linux
-      dist: trusty    
+      dist: xenial
       sudo: required
       compiler: clang
     - os: osx
-      osx_image: xcode7.3
-    - os: osx
-      osx_image: xcode6.1
+      osx_image: xcode9
 
 #
 # Some of the OS X images don't have cmake, contrary to what people 
