--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: kodi-vfs-rar
 Priority: extra
 Maintainer: Arne Morten Kvarving <spiff@xbmc.org>
 Build-Depends: debhelper (>= 9.0.0), cmake,
-               kodi-addon-dev
+               kodi-addon-dev, libp8-platform-dev
 Standards-Version: 3.9.4
 Section: libs
 
