add license and source url to addon.xml

--- a/vfs.rar/addon.xml.in
+++ b/vfs.rar/addon.xml.in
@@ -18,5 +18,7 @@
     <summary lang="en">RAR archive support</summary>
     <description lang="en">RAR archive support</description>
     <platform>@PLATFORM@</platform>
+    <license>GPL-2.0</license>
+    <source>https://github.com/xbmc/vfs.rar</source>
   </extension>
 </addon>
