--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,27 +4,32 @@ project(vfs.rar)
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
 
 find_package(Kodi REQUIRED)
-find_package(p8-platform REQUIRED)
+find_package(TinyXML REQUIRED)
 
 include_directories(${KODI_INCLUDE_DIR}/.. # Hack way with "/..", need bigger Kodi cmake rework to match right include ways
-                    ${p8-platform_INCLUDE_DIRS}
+                    ${TINYXML_INCLUDE_DIRS}
                     ${PROJECT_SOURCE_DIR}/lib/UnrarXLib)
 
 add_subdirectory(lib/UnrarXLib)
 
-set(RAR_SOURCES src/RarFile.cpp
+set(RAR_SOURCES src/RarControl.cpp
+                src/RarFile.cpp
                 src/RarExtractThread.cpp
                 src/RarManager.cpp)
 
-set(RAR_HEADERS src/RarExtractThread.h
+set(RAR_HEADERS src/Helpers.h
+                src/RarControl.h
+                src/RarExtractThread.h
                 src/RarManager.h)
 
 add_definitions(-D_LARGEFILE64_SOURCE
                 -D_FILE_OFFSET_BITS=64
                 -D__STDC_FORMAT_MACROS
-                -D_CRT_NONSTDC_NO_DEPRECATE)
+                -D_CRT_NONSTDC_NO_DEPRECATE
+                -DRARDLL
+                -DSILENT)
 
-set(DEPLIBS unrarxlib ${p8-platform_LIBRARIES})
+set(DEPLIBS unrarxlib ${TINYXML_LIBRARIES})
 
 build_addon(vfs.rar RAR DEPLIBS)
 
