check "codecvt" present and allow fallback if not
This is to fix build for Raspberry where this header not present
and as fallback then the on lib included own parts for "codecvt"
are used.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,13 @@ list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
 find_package(Kodi REQUIRED)
 find_package(TinyXML REQUIRED)
 
+include(CheckIncludeFileCXX)
+
+CHECK_INCLUDE_FILE_CXX(codecvt HAVE_CODECVT)
+if(HAVE_CODECVT)
+  add_definitions(-D_LIBCPP_VERSION)
+endif()
+
 include_directories(${KODI_INCLUDE_DIR}/.. # Hack way with "/..", need bigger Kodi cmake rework to match right include ways
                     ${TINYXML_INCLUDE_DIRS}
                     ${PROJECT_SOURCE_DIR}/lib/UnrarXLib)
