fix "codecvt" detect, before not worked on older ubuntu versions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,11 @@ list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
 find_package(Kodi REQUIRED)
 find_package(TinyXML REQUIRED)
 
-include(CheckIncludeFileCXX)
-
-CHECK_INCLUDE_FILE_CXX(codecvt HAVE_CODECVT)
-if(HAVE_CODECVT)
-  add_definitions(-D_LIBCPP_VERSION)
+include(CheckCXXSourceCompiles)
+check_cxx_source_compiles("#include <codecvt>
+                           int main() { return 0; }" HAS_CODECVT)
+if(HAS_CODECVT)
+  add_definitions(-DHAS_CODECVT)
 endif()
 
 include_directories(${KODI_INCLUDE_DIR}/.. # Hack way with "/..", need bigger Kodi cmake rework to match right include ways
