--- a/vfs.rar/addon.xml.in
+++ b/vfs.rar/addon.xml.in
@@ -20,8 +20,7 @@
 
 It allows direct reading of uncompressed RAR files, so prior unpacking is not necessary. For all other types, it is temporarily unpacked and passed to Kodi.
 
-Attention: A "Solid RAR" archive type requires complete unpacking to use files within it. Hence access times may be long for larger packages.
-</description>
+Attention: A "Solid RAR" archive type requires complete unpacking to use files within it. Hence access times may be long for larger packages.</description>
     <platform>@PLATFORM@</platform>
     <license>GPL-2.0</license>
     <source>https://github.com/xbmc/vfs.rar</source>
