--- a/depends/common/tinyxml/CMakeLists.txt
+++ b/depends/common/tinyxml/CMakeLists.txt
@@ -20,3 +20,9 @@ set(HEADERS ${PROJECT_SOURCE_DIR}/include/tinystr.h
 
 install(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
 install(TARGETS tinyxml DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+
+# As this static no need to make it public
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR
+   CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")
+endif()
