--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,17 +11,10 @@ jobs:
       matrix:
         include:
         - name: "Debian package test"
-          os: ubuntu-18.04
+          os: ubuntu-latest
           CC: gcc
           CXX: g++
           DEBIAN_BUILD: true
-        #- os: ubuntu-18.04
-          #CC: gcc
-          #CXX: g++
-        #- os: ubuntu-18.04
-          #CC: clang
-          #CXX: clang++
-        #- os: macos-10.15
     steps:
     - name: Install needed ubuntu depends
       env:
@@ -31,13 +24,13 @@ jobs:
         if [[ $DEBIAN_BUILD == true ]]; then sudo apt-get update; fi
         if [[ $DEBIAN_BUILD == true ]]; then sudo apt-get install fakeroot; fi
     - name: Checkout Kodi repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         repository: xbmc/xbmc
         ref: master
         path: xbmc
-    - name: Checkout vfs.rar repo
-      uses: actions/checkout@v2
+    - name: Checkout add-on repo
+      uses: actions/checkout@v4
       with:
         path: ${{ env.app_id }}
     - name: Configure
